--- a/jesse-framework-mcp/pyproject.toml
+++ b/jesse-framework-mcp/pyproject.toml
@@ -60,6 +60,8 @@ license = {text = "MIT"}
 requires-python = ">=3.10"
 dependencies = [
     "fastmcp~=2.9.2",
+    "boto3>=1.38.46",
+    "strands-agents>=0.1.0",
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -126,3 +128,9 @@ disallow_untyped_defs = true
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 asyncio_mode = "auto"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pytest-asyncio>=1.0.0",
+]
