--- a/jesse-framework-mcp/pyproject.toml
+++ b/jesse-framework-mcp/pyproject.toml
@@ -62,6 +62,7 @@ dependencies = [
     "fastmcp~=2.9.2",
     "boto3>=1.38.46",
     "strands-agents>=0.1.0",
+    "mistletoe>=1.4.0",
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
