--- a/jesse-framework-mcp/pyproject.toml
+++ b/jesse-framework-mcp/pyproject.toml
@@ -32,16 +32,15 @@
 # codebase:jesse_framework_mcp/__init__.py - Package initialization
 ###############################################################################
 # [GenAI tool change history]
+# 2025-07-06T00:52:00Z : Added PyYAML dependency for entity relationship mapping proof-of-concept by CodeAssistant
+# * Added "PyYAML>=6.0" to dependencies for YAML output generation
+# * Required for entity relationship mapping system YAML file generation
 # 2025-06-27T15:06:02Z : Updated Python version requirement to 3.10+ for FastMCP v2.9.2 by CodeAssistant
 # * Changed requires-python from ">=3.8" to ">=3.10" for FastMCP compatibility
 # * Updated Python classifiers and tool configurations to match requirement
 # 2025-06-27T17:10:30Z : Updated FastMCP dependency to v2.9.2 for Phase 2 modernization by CodeAssistant
 # * Changed dependency from "fastmcp~=2.9.0" to "fastmcp~=2.9.2"
 # * Phase 2 of JESSE MCP FastMCP modernization - resource architecture
-# 2025-06-27T01:21:00Z : Initial project configuration with build hooks by CodeAssistant
-# * Created pyproject.toml with Hatchling build system
-# * Configured custom build hook for JESSE content copying
-# * Set up FastMCP dependency and stdio transport configuration
 ###############################################################################
 
 [build-system]
@@ -63,6 +62,7 @@ dependencies = [
     "boto3>=1.38.46",
     "strands-agents>=0.1.0",
     "mistletoe>=1.4.0",
+    "PyYAML>=6.0",
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
